<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.neu.final_project_group_4.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tasks"
        android:name="edu.neu.final_project_group_4.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks">

    </fragment>

    <fragment
        android:id="@+id/addTaskFragment"
        android:name="edu.neu.final_project_group_4.ui.tasks.AddTaskFragment"
        android:label="Add Task">
        <argument
            android:name="task"
            app:argType="edu.neu.final_project_group_4.models.TaskModel" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.neu.final_project_group_4.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_ai"
        android:name="edu.neu.final_project_group_4.ui.ai.AiFragment"
        android:label="@string/title_ai"
        tools:layout="@layout/fragment_ai" />
</navigation>